--- a/App/Previsor_teste.ipynb
+++ b/App/Previsor_teste.ipynb
@@ -2,153 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Escolha uma opção:\n",
-      "0) - Sair\n",
-      "1) - Calcular previsão da base de dados\n",
-      "2) - Atualizar base de dados\n",
-      "3) - Checar Rapeel\n",
-      "Sessão terminada.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import os\n",
-    "os.chdir(os.path.dirname(__file__))\n",
-    "\n",
-    "from Calcular_Previsao import calcular_previsao\n",
-    "from download_DB import download_db\n",
-    "from checar_rapeel import checar_Rapeel\n",
-    "import pandas as pd\n",
-    "import sys\n",
+    "import os, sys\n",
     "from utils import *\n",
-    "from tkinter import Tk\n",
-    "from tkinter.filedialog import askopenfilename\n",
-    "import psutil\n",
-    "from datetime import date\n",
-    "\n",
-    "\n",
-    "hoje = pd.to_datetime(date.today())\n",
-    "hoje_str = hoje.strftime(r'%Y_%m_%d')\n",
-    "skate_downloads_folder_name = \"SKATE_Downloads\"\n",
-    "root_path = os.path.join(get_standard_folder_path(\"Documents\"), \"Previsor\")\n",
-    "download_path = os.path.join(root_path, skate_downloads_folder_name)\n",
-    "previsoes_path = os.path.join(root_path, \"Previsoes\")\n",
-    "checar_rapeel_path = os.path.join(root_path, \"Checar_Rapeel\")\n",
-    "\n",
-    "\n",
-    "def create_previsor_folders():\n",
-    "    # Cria pastas padrão necessárias\n",
-    "    create_folder(root_path)\n",
-    "    create_folder(download_path)\n",
-    "    create_folder(previsoes_path)\n",
-    "    create_folder(checar_rapeel_path)\n",
-    "\n",
-    "\n",
-    "def calc_previsao():\n",
-    "    # Calcula previsão\n",
-    "    global result, skate_merged\n",
-    "    directory = download_db(download_path, lista_download=[\n",
-    "                            \"skate_leilao\", \"skate_ug\", \"skate_usinas\"])\n",
-    "    result, skate_merged = calcular_previsao(directory)\n",
-    "    skate_export = skate_merged[['NomUsina', 'IdeUsinaOutorga', 'NumUgUsina', 'SigTipoGeracao',\n",
-    "                                 'Previsao_OC', 'Dat_OC_obrigacao', 'DatMonitoramento', 'FaseAtual', 'Indicador']].copy()\n",
-    "    skate_export[\"Previsao_OC\"] = skate_export.Previsao_OC.dt.normalize()\n",
-    "    skate_export[\"DatMonitoramento\"] = skate_export.DatMonitoramento.dt.normalize()\n",
-    "    return result, skate_export\n",
-    "\n",
-    "\n",
-    "def get_biu():\n",
-    "    Tk().withdraw()\n",
-    "    filename = askopenfilename()\n",
-    "    return filename\n",
-    "\n",
-    "\n",
-    "def menu_principal():\n",
-    "    clear_console()\n",
-    "    # Apresenta menu principal\n",
-    "    global skate_merged, skate_export\n",
-    "    global result, df\n",
-    "    dict_menu_principal = {\n",
-    "        0: \"Sair\",\n",
-    "        1: \"Calcular previsão da base de dados\",\n",
-    "        2: \"Atualizar base de dados\",\n",
-    "        3: \"Checar Rapeel\",\n",
-    "\n",
-    "    }\n",
-    "    show_options(dict_menu_principal)\n",
-    "    opcao_menu = get_num(dict_menu_principal)\n",
-    "\n",
-    "    clear_console()\n",
-    "    print(dict_menu_principal[opcao_menu])\n",
-    "    print(\"\\n\")\n",
-    "\n",
-    "    if opcao_menu == 0:\n",
-    "        print(\"Sessão terminada.\")\n",
-    "        return 0\n",
-    "\n",
-    "    if opcao_menu == 1:\n",
-    "        clear_console()\n",
-    "        print(\"Calculando previsão...\")\n",
-    "        result, skate_export = calc_previsao()\n",
-    "        if result == \"Ok\":\n",
-    "            segundos_estimado = ((2901 / psutil.cpu_freq().max)\n",
-    "                                * (skate_export.shape[0] / 50_000) * 24)\n",
-    "            print(\n",
-    "                f\"Exportando arquivo com previsões... Previsão: {segundos_estimado:.0f} segundos.\")\n",
-    "            previsao_file = os.path.join(\n",
-    "                previsoes_path, f\"Previsao_OC_{hoje_str}.xlsx\")\n",
-    "            previsor_detalhe = os.path.join(\n",
-    "                previsoes_path, f\"Previsao_OC_detalhada_{hoje_str}.xlsx\")\n",
-    "            skate_export.to_excel(previsao_file, index=False)\n",
-    "            print(f\"Arquivo exportado: {previsao_file}\\n\")\n",
-    "            segundos_estimado = ((2901 / psutil.cpu_freq().max)\n",
-    "                                * (skate_merged.shape[0] / 50_000) * 120)\n",
-    "            print(\n",
-    "                f\"Deseja exportar arquivo detalahado? Previsão: {segundos_estimado:.0f} segundos.\\n\")\n",
-    "\n",
-    "            options = {\n",
-    "                0: \"Não\",\n",
-    "                1: \"Sim\"\n",
-    "            }\n",
-    "            show_options(options)\n",
-    "            opcao_previsao = get_num(options)\n",
-    "\n",
-    "            if opcao_previsao:\n",
-    "                print(\"Exportando arquivo de previsão detalhado...\")\n",
-    "                skate_merged.to_excel(previsor_detalhe, index=False)\n",
-    "                print(f\"Arquivo exportado: {previsor_detalhe}\\n\\n\")\n",
-    "            perguntar_abrir_pasta(previsoes_path)\n",
-    "\n",
-    "    if opcao_menu == 2:\n",
-    "        directory = download_db(download_path, force_download=True, lista_download=[\n",
-    "                                \"skate_ug\", \"skate_usinas\", \"leilao\"])\n",
-    "\n",
-    "    if opcao_menu == 3:\n",
-    "        global biu\n",
-    "        print(\"Data do início do BIU:\")\n",
-    "        inicio_biu = get_date()\n",
-    "        print(\"Selecione o arquivo do BIU\\n\")\n",
-    "        biu_file_path = get_biu()\n",
-    "        directory = download_db(download_path, force_download=False, lista_download=[\n",
-    "                                \"rapeel\", \"skate_ug\", \"skate_usinas\"])\n",
-    "        \n",
-    "        checar_Rapeel(biu_file_path, directory, inicio_biu, checar_rapeel_path)\n",
-    "        _ = input(\"Aperte enter para retornar ao menu.\")\n",
-    "    return opcao_menu\n",
-    "\n",
-    "clear_console()\n",
-    "create_previsor_folders()\n",
-    "while (True):\n",
-    "    opcao_menu = menu_principal()\n",
-    "    if opcao_menu == 0:\n",
-    "        break\n"
+    "from download_DB import download_db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "directory = download_db(lista_download=[\"rapeel_contrato\"])"
    ]
   }
  ],
@@ -156,7 +25,7 @@
   "kernelspec": {
    "display_name": "Aneel",
    "language": "python",
-   "name": "aneel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -168,7 +37,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
